fixed message wrap issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,8 @@ ul {
   border: 1px solid #a3d4ec;
   border-radius: 10px 0 10px 10px;
   position: relative;
+  max-width: 80%;
+  word-wrap: break-word;
 }
 
 
@@ -40,6 +42,8 @@ ul {
   border: 1px solid #f2dede;
   border-radius: 0 10px 10px;
   position: relative;
+  max-width: 80%;
+  word-wrap: break-word;
 }
 .message-sent:before{
 	content: "";
@@ -176,21 +180,22 @@ img.modal_group_img {
 .panel-body ul li {
     margin-bottom: 10px;
 }
-  textarea.autoExpand{  
-    display: block;
-    box-sizing: border-box;
-    overflow: hidden;
-    margin: 50px auto 10px;
-    border: 1px solid #aaa;
-    resize:none;
-    border-radius: 30px;
-    padding: 5px 20px;
-    outline:none;
-    width: 100%;
-    max-height: 150px;
-    height: 32px;
-  }
-  .send {cursor: pointer;position: absolute;right: 12px;bottom: 0;opacity: 0.5;font-size: 22px;border: 1px solid #050505;display: inline-block;padding: 5px;border-radius: 50%;height: 32px}
-  .send:hover { opacity: 0.9;background: #eee; }
-  .send_msg_btn{display: none;}
-  .send_message_container{position: relative;margin-top: 10px;padding-right: 60px;}
+textarea.autoExpand{  
+  display: block;
+  box-sizing: border-box;
+  overflow: hidden;
+  margin: 50px auto 10px;
+  border: 1px solid #aaa;
+  resize:none;
+  border-radius: 30px;
+  padding: 5px 20px;
+  outline:none;
+  width: 100%;
+  max-height: 150px;
+  height: 32px;
+  overflow-y: auto;
+}
+.send {cursor: pointer;position: absolute;right: 12px;bottom: 0;opacity: 0.5;font-size: 22px;border: 1px solid #050505;display: inline-block;padding: 5px;border-radius: 50%;height: 32px}
+.send:hover { opacity: 0.9;background: #eee; }
+.send_msg_btn{display: none;}
+.send_message_container{position: relative;margin-top: 10px;padding-right: 60px;}
